@@ -1,8 +1,8 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.015.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.017.
 use strict;
 use warnings;
 
-use 5.014;
+use 5.020;
 
 use ExtUtils::MakeMaker;
 
@@ -14,10 +14,10 @@ my %WriteMakefileArgs = (
   },
   "DISTNAME" => "Bible-OBML",
   "LICENSE" => "perl",
-  "MIN_PERL_VERSION" => "5.014",
+  "MIN_PERL_VERSION" => "5.020",
   "NAME" => "Bible::OBML",
   "PREREQ_PM" => {
-    "Bible::Reference" => "1.02",
+    "Bible::Reference" => "1.05",
     "Clone" => 0,
     "Template" => 0,
     "Text::Balanced" => 0,
@@ -35,7 +35,7 @@ my %WriteMakefileArgs = (
     "strict" => 0,
     "warnings" => 0
   },
-  "VERSION" => "1.14",
+  "VERSION" => "1.15",
   "test" => {
     "TESTS" => "t/*.t t/Bible/*.t t/Bible/OBML/*.t"
   }
@@ -43,7 +43,7 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "Bible::Reference" => "1.02",
+  "Bible::Reference" => "1.05",
   "Clone" => 0,
   "File::Spec" => 0,
   "IO::Handle" => 0,
