@@ -179,7 +179,7 @@ sub main {
         q\last <i>days</i><sup class="obml_footnote"><a href="#fn14" title="14: literally at the last time"\,
         q\>[14]</a></sup><sup class="obml_crossreference"><a href="#cr15" title="15: Ac 20:29; 1Ti 4:1; 2Ti 4:3; 2Pt\,
         q\3:3" >{15}</a></sup> <i>there</i> will be mockers following their own ungodly lusts.<sup\,
-        q\class="obml_crossreference"><a href="#cr16" title="16: 2Pt 2:1, 3:3" >{16}</a></sup> </p></div>\,
+        q\class="obml_crossreference"><a href="#cr16" title="16: 2Pt 2:1; 3:3" >{16}</a></sup> </p></div>\,
         q\</div>\,
         q\<div class="obml_notes_title">Notes</div>\,
         q\<div class="obml_notes">\,
@@ -274,7 +274,7 @@ sub main {
         q\<li><a name="cr13">Ep 4:11</a></li>\,
         q\<li><a name="cr14">He 2:3; 2Pt 3:2</a></li>\,
         q\<li><a name="cr15">Ac 20:29; 1Ti 4:1; 2Ti 4:3; 2Pt 3:3</a></li>\,
-        q\<li><a name="cr16">2Pt 2:1, 3:3</a></li>\,
+        q\<li><a name="cr16">2Pt 2:1; 3:3</a></li>\,
         q\</ol>\,
         q\</div>\,
         q\</div>\,
