@@ -1,6 +1,9 @@
 Revision history for Bible::OBML
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
+        - Update to require Bible::Reference 1.05
 
 1.14      2020-07-17 15:21:06-07:00 America/Los_Angeles
         - Improved rendering of OBML from parsed data
